; ModuleID = '/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_symbol.c_sym_get_range_val.c'
source_filename = "/home/carl/AnghaBench/esp-idf/tools/kconfig/extr_symbol.c_sym_get_range_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.symbol = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.symbol*, i32)* @sym_get_range_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @sym_get_range_val(%struct.symbol* %0, i32 %1) #0 {
  %3 = alloca %struct.symbol*, align 8
  %4 = alloca i32, align 4
  store %struct.symbol* %0, %struct.symbol** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.symbol*, %struct.symbol** %3, align 8
  %6 = call i32 @sym_calc_value(%struct.symbol* %5)
  %7 = load %struct.symbol*, %struct.symbol** %3, align 8
  %8 = getelementptr inbounds %struct.symbol, %struct.symbol* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %12 [
    i32 128, label %10
    i32 129, label %11
  ]

10:                                               ; preds = %2
  store i32 10, i32* %4, align 4
  br label %13

11:                                               ; preds = %2
  store i32 16, i32* %4, align 4
  br label %13

12:                                               ; preds = %2
  br label %13

13:                                               ; preds = %12, %11, %10
  %14 = load %struct.symbol*, %struct.symbol** %3, align 8
  %15 = getelementptr inbounds %struct.symbol, %struct.symbol* %14, i32 0, i32 1
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* %4, align 4
  %19 = call i64 @strtoll(i32 %17, i32* null, i32 %18)
  ret i64 %19
}

declare dso_local i32 @sym_calc_value(%struct.symbol*) #1

declare dso_local i64 @strtoll(i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
